--- a/docs/ru/4g.md
+++ b/docs/ru/4g.md
@@ -2,7 +2,7 @@
 
 Мобильная связь четвертого поколения удобный инструмент для передачи и получения информации на большой скорости. В настоящее время область покрытия мобильных операторов позволяет подключаться к интернету на большой скорости практически из любой точки.
 
-> **Hint** Для передачи каких либо данных с вашего коптера на наземную станцию(QGroundControl) и обратно, вам необходимо настроить собственную VPN сеть.
+> **Hint** Для передачи каких либо данных с вашего дрона на наземную станцию(QGroundControl) и обратно, вам необходимо настроить собственную VPN сеть.
 
 ## Подключение 4G модема к Raspberry Pi
 
@@ -61,7 +61,7 @@ sudo apt-get install openvpn
 
 Перенесите ваши ключи в директорию `/etc/openvpn/client`. Для удобства используйте графический SFTP интерфейс передачи данных, к примеру: WinSCP, FileZilla и т.д.
 
-Для включения режима клиента, необходимо активировать переданные вами ключи. Ключи могу быть сформированы в различных форматах, к примеру: `.ovpn`, `.conf`. Ключ или конфигурация использующийся на вашем коптере, должны быть строго в формате `.conf`.
+Для включения режима клиента, необходимо активировать переданные вами ключи. Ключи могу быть сформированы в различных форматах, к примеру: `.ovpn`, `.conf`. Ключ или конфигурация использующийся на вашем дроне, должны быть строго в формате `.conf`.
 
 Инициализируйте сервис применяющий ваши ключи для подключения в режиме клиента:
 
@@ -79,17 +79,17 @@ sudo systemctl enable openvpn-client@config-name
 
 > **Hint** В качестве удобной альтернативы вы можете воспользоваться VPN-сервисом [ZeroTier](zerotier_vpn.md).
 
-## Управление коптером через QGroundControl
+## Управление дроном через QGroundControl
 
-> **Hint** Для управления коптером предлагается использовать UDP протокол передачи, обеспечивающий меньшую задержку, ценой отсутствия гарантии получения пакета, что очень важно во время пилотирования коптера.
+> **Hint** Для управления дроном предлагается использовать UDP протокол передачи, обеспечивающий меньшую задержку, ценой отсутствия гарантии получения пакета, что очень важно во время пилотирования дрона.
 
-Убедитесь, что ваш коптер и наземная станция подключены к вашей сети.
+Убедитесь, что ваш дрон и наземная станция подключены к вашей сети.
 
-Для этого можете воспользоваться командой `ip addr`. Результатом ее выхода будет пронумерованный список активных сетей включенных на вашем устройстве. Обратить внимание стоит на подключение с префиксом *tun* и указанным вами IP адресом, если оно присутствует в вашем списке, ваш коптер подключился к сети.
+Для этого можете воспользоваться командой `ip addr`. Результатом ее выхода будет пронумерованный список активных сетей включенных на вашем устройстве. Обратить внимание стоит на подключение с префиксом *tun* и указанным вами IP адресом, если оно присутствует в вашем списке, ваш дрон подключился к сети.
 
-В QGroundControl, аналогично [подключению по Wi-Fi](gcs_bridge.md), настройте подключение к вашему коптеру по протоколу использующемуся в вашей сети: *UDP/TCP*. Рекомендуется использовать *UDP* подключение, за счет большей скорости передачи данных.
+В QGroundControl, аналогично [подключению по Wi-Fi](gcs_bridge.md), настройте подключение к вашему дрону по протоколу использующемуся в вашей сети: *UDP/TCP*. Рекомендуется использовать *UDP* подключение, за счет большей скорости передачи данных.
 
-Если у вас появилась связь с коптером, подключите какой-либо джойстик к вашему ПК. Роль джойстика может выполнять как радио пульты, такие как, FlySky-i6X, Taranis x7 и т.д., так и джойстики от приставок или любые их эмуляции, которые распознаются системой.
+Если у вас появилась связь с дроном, подключите какой-либо джойстик к вашему ПК. Роль джойстика может выполнять как радио пульты, такие как, FlySky-i6X, Taranis x7 и т.д., так и джойстики от приставок или любые их эмуляции, которые распознаются системой.
 
 Когда джойстик распознается системой, в колонке *Vehicle Setup* появится пункт *Joystick*, в случае, если он подсвечивается красным цветом, это значит, что требуется настройка.
 
@@ -106,7 +106,7 @@ sudo systemctl enable openvpn-client@config-name
 
 > **Info** При выборе джойстика, обратите внимание на количество рабочих каналов и на поддержку его, в QGroundControl(SDL2). Встречаются пульты поддерживающие всего 4 канала, что не удобно для такого типа управления.
 
-Если изменения положения стиков отображается в окне QGroundControl, вам остается только применить параметр, определяющий, что управление коптером происходит с помощью джойстика, а не радиоаппаратуры:
+Если изменения положения стиков отображается в окне QGroundControl, вам остается только применить параметр, определяющий, что управление дроном происходит с помощью джойстика, а не радиоаппаратуры:
 
 `COM_RC_IN_MODE` - Joystick/No RC Checks
 
@@ -114,9 +114,9 @@ sudo systemctl enable openvpn-client@config-name
 
 <img src="../assets/4g/failsafe.png" width=300 class="zoom center border">
 
-Коптер готов к полету!
+Дрон готов к полету!
 
-> **Hint** Если коптер не армится при переведении левого стика в нижний правый угол, установите состояние Arm/Disarm на один из тумблеров.
+> **Hint** Если дрон не армится при переведении левого стика в нижний правый угол, установите состояние Arm/Disarm на один из тумблеров.
 
 ## Передача видео с камеры в QGroundControl
 
