Update modules and sensors

--- a/docs/ru/4g.md
+++ b/docs/ru/4g.md
@@ -2,7 +2,7 @@
 
 Мобильная связь четвертого поколения удобный инструмент для передачи и получения информации на большой скорости. В настоящее время область покрытия мобильных операторов позволяет подключаться к интернету на большой скорости практически из любой точки.
 
-> **Hint** Для передачи каких либо данных с вашего дрона на наземную станцию(QGroundControl) и обратно, вам необходимо настроить собственную VPN сеть.
+> **Подсказка** Для передачи каких либо данных с вашего дрона на наземную станцию(QGroundControl) и обратно, вам необходимо настроить собственную VPN сеть.
 
 ## Подключение 4G модема к Raspberry Pi
 
@@ -34,14 +34,14 @@ sudo udhcpc -q -f -i wwan0
 
 <!-- markdownlint-disable MD031 -->
 
-> **Hint** Проверить наличие соединения с интернетом можно командой:
+> **Подсказка** Проверить наличие соединения с интернетом можно командой:
 > ```bash
 > ping -I wwan0 -c 5 8.8.8.8
 > ```
 
 <!-- -->
 
-> **Hint** Проверить скорость соединения с интернетом можно утилитой `speedtest`:
+> **Подсказка** Проверить скорость соединения с интернетом можно утилитой `speedtest`:
 > ```bash
 > sudo apt install speedtest-cli
 > speedtest
@@ -73,15 +73,15 @@ sudo systemctl enable openvpn-client@config-name
 
 Если все сделано правильно, при каждом перезапуске системы, сервис-клиент будет автоматически подключаться к вашей сети.
 
-> **Hint** Перед началом работы не забудьте настроить и включить VPN подключение на вашем ПК.
+> **Подсказка** Перед началом работы не забудьте настроить и включить VPN подключение на вашем ПК.
 
 <!-- -->
 
-> **Hint** В качестве удобной альтернативы вы можете воспользоваться VPN-сервисом [ZeroTier](zerotier_vpn.md).
+> **Подсказка** В качестве удобной альтернативы вы можете воспользоваться VPN-сервисом [ZeroTier](zerotier_vpn.md).
 
 ## Управление дроном через QGroundControl
 
-> **Hint** Для управления дроном предлагается использовать UDP протокол передачи, обеспечивающий меньшую задержку, ценой отсутствия гарантии получения пакета, что очень важно во время пилотирования дрона.
+> **Подсказка** Для управления дроном предлагается использовать UDP протокол передачи, обеспечивающий меньшую задержку, ценой отсутствия гарантии получения пакета, что очень важно во время пилотирования дрона.
 
 Убедитесь, что ваш дрон и наземная станция подключены к вашей сети.
 
@@ -104,7 +104,7 @@ sudo systemctl enable openvpn-client@config-name
 
 <img src="../assets/4g/fly_modes.png" width=300 class="zoom center border">
 
-> **Info** При выборе джойстика, обратите внимание на количество рабочих каналов и на поддержку его, в QGroundControl(SDL2). Встречаются пульты поддерживающие всего 4 канала, что не удобно для такого типа управления.
+> **Информация** При выборе джойстика, обратите внимание на количество рабочих каналов и на поддержку его, в QGroundControl(SDL2). Встречаются пульты поддерживающие всего 4 канала, что не удобно для такого типа управления.
 
 Если изменения положения стиков отображается в окне QGroundControl, вам остается только применить параметр, определяющий, что управление дроном происходит с помощью джойстика, а не радиоаппаратуры:
 
@@ -116,7 +116,7 @@ sudo systemctl enable openvpn-client@config-name
 
 Дрон готов к полету!
 
-> **Hint** Если дрон не армится при переведении левого стика в нижний правый угол, установите состояние Arm/Disarm на один из тумблеров.
+> **Подсказка** Если дрон не армится при переведении левого стика в нижний правый угол, установите состояние Arm/Disarm на один из тумблеров.
 
 ## Передача видео с камеры в QGroundControl
 
@@ -137,7 +137,7 @@ gst-rtsp-launch "( v4l2src device=/dev/video0 ! video/x-raw,framerate=30/1,width
 
 Данная командная строка содержит параметры передачи видео, такие как: устройство передачи, частота кадров, высота/ширина изображения, метод кодирования и т.д. Подробнее о настройках [можно узнать тут](https://github.com/sfalexrog/gst-rtsp-launch/blob/master/README.md).
 
-> **Info** Камера Raspberry Pi `/dev/video0` может использоваться сервисом `drone` и тогда `gst-rtsp-launch` не сможет получить к ней доступ. Чтобы остановить сервис `drone` выполните команду `sudo systemctl stop drone`. Также можно пустить трансляцию с USB-камеры, для этого замените устройство передачи на `/dev/video1`.
+> **Информация** Камера Raspberry Pi `/dev/video0` может использоваться сервисом `drone` и тогда `gst-rtsp-launch` не сможет получить к ней доступ. Чтобы остановить сервис `drone` выполните команду `sudo systemctl stop drone`. Также можно пустить трансляцию с USB-камеры, для этого замените устройство передачи на `/dev/video1`.
 
 В приложении QGroundControl проверьте, что по ссылке `rtsp://192.168.11.1:8554/video` (IP-адрес вашей Raspberry Pi может отличаться) начался стрим изображения.
 
